// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`given element A and group of elements B and given both are selected when user clicks on B, on pointer up only elements from B should be selected > [end of test] appState 1`] = `undefined`;

exports[`given element A and group of elements B and given both are selected when user clicks on B, on pointer up only elements from B should be selected > [end of test] number of renders 1`] = `0`;

exports[`given element A and group of elements B and given both are selected when user shift-clicks on B, on pointer up only element A should be selected > [end of test] appState 1`] = `undefined`;

exports[`given element A and group of elements B and given both are selected when user shift-clicks on B, on pointer up only element A should be selected > [end of test] number of renders 1`] = `0`;

exports[`regression tests > Cmd/Ctrl-click exclusively select element under pointer > [end of test] appState 1`] = `undefined`;

exports[`regression tests > Cmd/Ctrl-click exclusively select element under pointer > [end of test] number of renders 1`] = `0`;

exports[`regression tests > Drags selected element when hitting only bounding box and keeps element selected > [end of test] appState 1`] = `undefined`;

exports[`regression tests > Drags selected element when hitting only bounding box and keeps element selected > [end of test] number of renders 1`] = `0`;

exports[`regression tests > adjusts z order when grouping > [end of test] appState 1`] = `undefined`;

exports[`regression tests > adjusts z order when grouping > [end of test] number of renders 1`] = `0`;

exports[`regression tests > alt-drag duplicates an element > [end of test] appState 1`] = `undefined`;

exports[`regression tests > alt-drag duplicates an element > [end of test] number of renders 1`] = `0`;

exports[`regression tests > arrow keys > [end of test] appState 1`] = `undefined`;

exports[`regression tests > arrow keys > [end of test] number of renders 1`] = `0`;

exports[`regression tests > can drag element that covers another element, while another elem is selected > [end of test] appState 1`] = `undefined`;

exports[`regression tests > can drag element that covers another element, while another elem is selected > [end of test] number of renders 1`] = `0`;

exports[`regression tests > change the properties of a shape > [end of test] appState 1`] = `undefined`;

exports[`regression tests > change the properties of a shape > [end of test] number of renders 1`] = `0`;

exports[`regression tests > click on an element and drag it > [dragged] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeLockedId": null,
  "activeTool": {
    "customType": null,
    "fromSelection": false,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "bindMode": "orbit",
  "collaborators": Map {},
  "contextMenu": null,
  "croppingElementId": null,
  "currentChartType": "bar",
  "currentHoveredFontFamily": null,
  "currentItemArrowType": "round",
  "currentItemBackgroundColor": "transparent",
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 5,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "sharp",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeWidth": 2,
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "editingFrame": null,
  "editingGroupId": null,
  "editingTextElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridModeEnabled": false,
  "gridSize": 20,
  "gridStep": 5,
  "height": 768,
  "hoveredElementIds": {},
  "isBindingEnabled": true,
  "isCropping": false,
  "isLoading": false,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "lockedMultiSelections": {},
  "multiElement": null,
  "name": "Untitled-201933152653",
  "newElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 0,
  "offsetTop": 0,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": null,
  "pasteDialog": {
    "data": null,
    "shown": false,
  },
  "penDetected": false,
  "penMode": false,
  "preferredSelectionTool": {
    "initialized": true,
    "type": "selection",
  },
  "previousSelectedElementIds": {
    "id0": true,
  },
  "resizingElement": null,
  "scrollX": 0,
  "scrollY": 0,
  "scrolledOutside": false,
  "searchMatches": null,
  "selectedElementIds": {
    "id0": true,
  },
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectedLinearElement": null,
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "startBoundElement": null,
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBinding": null,
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 1440,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`regression tests > click on an element and drag it > [dragged] element 0 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 10,
  "id": "id0",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": 1278240551,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 4,
  "versionNonce": 1014066025,
  "width": 10,
  "x": 20,
  "y": 20,
}
`;

exports[`regression tests > click on an element and drag it > [dragged] number of elements 1`] = `1`;

exports[`regression tests > click on an element and drag it > [dragged] number of renders 1`] = `8`;

exports[`regression tests > click on an element and drag it > [dragged] redo stack 1`] = `[]`;

exports[`regression tests > click on an element and drag it > [dragged] undo stack 1`] = `
[
  {
    "appState": AppStateDelta {
      "delta": Delta {
        "deleted": {
          "selectedElementIds": {
            "id0": true,
          },
        },
        "inserted": {
          "selectedElementIds": {},
        },
      },
    },
    "elements": {
      "added": {},
      "removed": {
        "id0": {
          "deleted": {
            "angle": 0,
            "backgroundColor": "transparent",
            "boundElements": null,
            "customData": undefined,
            "fillStyle": "solid",
            "frameId": null,
            "groupIds": [],
            "height": 10,
            "index": "a0",
            "isDeleted": false,
            "link": null,
            "locked": false,
            "opacity": 100,
            "roughness": 1,
            "roundness": null,
            "strokeColor": "#1e1e1e",
            "strokeStyle": "solid",
            "strokeWidth": 2,
            "type": "rectangle",
            "version": 3,
            "width": 10,
            "x": 10,
            "y": 10,
          },
          "inserted": {
            "isDeleted": true,
            "version": 2,
          },
        },
      },
      "updated": {},
    },
    "id": "id2",
  },
  {
    "appState": AppStateDelta {
      "delta": Delta {
        "deleted": {},
        "inserted": {},
      },
    },
    "elements": {
      "added": {},
      "removed": {},
      "updated": {
        "id0": {
          "deleted": {
            "version": 4,
            "x": 20,
            "y": 20,
          },
          "inserted": {
            "version": 3,
            "x": 10,
            "y": 10,
          },
        },
      },
    },
    "id": "id5",
  },
]
`;

exports[`regression tests > click on an element and drag it > [end of test] appState 1`] = `undefined`;

exports[`regression tests > click on an element and drag it > [end of test] number of renders 1`] = `0`;

exports[`regression tests > click to select a shape > [end of test] appState 1`] = `undefined`;

exports[`regression tests > click to select a shape > [end of test] number of renders 1`] = `0`;

exports[`regression tests > click-drag to select a group > [end of test] appState 1`] = `undefined`;

exports[`regression tests > click-drag to select a group > [end of test] number of renders 1`] = `0`;

exports[`regression tests > deleting last but one element in editing group should unselect the group > [end of test] appState 1`] = `undefined`;

exports[`regression tests > deleting last but one element in editing group should unselect the group > [end of test] number of renders 1`] = `0`;

exports[`regression tests > deselects group of selected elements on pointer down when pointer doesn't hit any element > [end of test] appState 1`] = `undefined`;

exports[`regression tests > deselects group of selected elements on pointer down when pointer doesn't hit any element > [end of test] number of renders 1`] = `0`;

exports[`regression tests > deselects group of selected elements on pointer up when pointer hits common bounding box without hitting any element > [end of test] appState 1`] = `undefined`;

exports[`regression tests > deselects group of selected elements on pointer up when pointer hits common bounding box without hitting any element > [end of test] number of renders 1`] = `0`;

exports[`regression tests > deselects selected element on pointer down when pointer doesn't hit any element > [end of test] appState 1`] = `undefined`;

exports[`regression tests > deselects selected element on pointer down when pointer doesn't hit any element > [end of test] number of renders 1`] = `0`;

exports[`regression tests > deselects selected element, on pointer up, when click hits element bounding box but doesn't hit the element > [end of test] appState 1`] = `undefined`;

exports[`regression tests > deselects selected element, on pointer up, when click hits element bounding box but doesn't hit the element > [end of test] number of renders 1`] = `0`;

exports[`regression tests > double click to edit a group > [end of test] appState 1`] = `undefined`;

exports[`regression tests > double click to edit a group > [end of test] number of renders 1`] = `0`;

exports[`regression tests > drags selected elements from point inside common bounding box that doesn't hit any element and keeps elements selected after dragging > [end of test] appState 1`] = `undefined`;

exports[`regression tests > drags selected elements from point inside common bounding box that doesn't hit any element and keeps elements selected after dragging > [end of test] number of renders 1`] = `0`;

exports[`regression tests > draw every type of shape > [end of test] appState 1`] = `undefined`;

exports[`regression tests > draw every type of shape > [end of test] number of renders 1`] = `0`;

exports[`regression tests > given a group of selected elements with an element that is not selected inside the group common bounding box when element that is not selected is clicked should switch selection to not selected element on pointer up > [end of test] appState 1`] = `undefined`;

exports[`regression tests > given a group of selected elements with an element that is not selected inside the group common bounding box when element that is not selected is clicked should switch selection to not selected element on pointer up > [end of test] number of renders 1`] = `0`;

exports[`regression tests > given a selected element A and a not selected element B with higher z-index than A and given B partially overlaps A when there's a shift-click on the overlapped section B is added to the selection > [end of test] appState 1`] = `undefined`;

exports[`regression tests > given a selected element A and a not selected element B with higher z-index than A and given B partially overlaps A when there's a shift-click on the overlapped section B is added to the selection > [end of test] number of renders 1`] = `0`;

exports[`regression tests > given selected element A with lower z-index than unselected element B and given B is partially over A when clicking intersection between A and B B should be selected on pointer up > [end of test] appState 1`] = `undefined`;

exports[`regression tests > given selected element A with lower z-index than unselected element B and given B is partially over A when clicking intersection between A and B B should be selected on pointer up > [end of test] number of renders 1`] = `0`;

exports[`regression tests > given selected element A with lower z-index than unselected element B and given B is partially over A when dragging on intersection between A and B A should be dragged and keep being selected > [end of test] appState 1`] = `undefined`;

exports[`regression tests > given selected element A with lower z-index than unselected element B and given B is partially over A when dragging on intersection between A and B A should be dragged and keep being selected > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key 2 selects rectangle tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key 2 selects rectangle tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key 3 selects diamond tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key 3 selects diamond tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key 4 selects ellipse tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key 4 selects ellipse tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key 5 selects arrow tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key 5 selects arrow tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key 6 selects line tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key 6 selects line tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key 7 selects freedraw tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key 7 selects freedraw tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key a selects arrow tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key a selects arrow tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key d selects diamond tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key d selects diamond tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key l selects line tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key l selects line tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key o selects ellipse tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key o selects ellipse tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key p selects freedraw tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key p selects freedraw tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > key r selects rectangle tool > [end of test] appState 1`] = `undefined`;

exports[`regression tests > key r selects rectangle tool > [end of test] number of renders 1`] = `0`;

exports[`regression tests > make a group and duplicate it > [end of test] appState 1`] = `undefined`;

exports[`regression tests > make a group and duplicate it > [end of test] number of renders 1`] = `0`;

exports[`regression tests > noop interaction after undo shouldn't create history entry > [end of test] appState 1`] = `undefined`;

exports[`regression tests > noop interaction after undo shouldn't create history entry > [end of test] number of renders 1`] = `0`;

exports[`regression tests > pinch-to-zoom works > [end of test] appState 1`] = `undefined`;

exports[`regression tests > pinch-to-zoom works > [end of test] number of renders 1`] = `0`;

exports[`regression tests > shift click on selected element should deselect it on pointer up > [end of test] appState 1`] = `undefined`;

exports[`regression tests > shift click on selected element should deselect it on pointer up > [end of test] number of renders 1`] = `0`;

exports[`regression tests > shift-click to multiselect, then drag > [end of test] appState 1`] = `undefined`;

exports[`regression tests > shift-click to multiselect, then drag > [end of test] number of renders 1`] = `0`;

exports[`regression tests > should group elements and ungroup them > [end of test] appState 1`] = `undefined`;

exports[`regression tests > should group elements and ungroup them > [end of test] number of renders 1`] = `0`;

exports[`regression tests > single-clicking on a subgroup of a selected group should not alter selection > [end of test] appState 1`] = `undefined`;

exports[`regression tests > single-clicking on a subgroup of a selected group should not alter selection > [end of test] number of renders 1`] = `0`;

exports[`regression tests > spacebar + drag scrolls the canvas > [end of test] appState 1`] = `undefined`;

exports[`regression tests > spacebar + drag scrolls the canvas > [end of test] number of renders 1`] = `0`;

exports[`regression tests > supports nested groups > [end of test] appState 1`] = `undefined`;

exports[`regression tests > supports nested groups > [end of test] number of renders 1`] = `0`;

exports[`regression tests > switches from group of selected elements to another element on pointer down > [end of test] appState 1`] = `undefined`;

exports[`regression tests > switches from group of selected elements to another element on pointer down > [end of test] number of renders 1`] = `0`;

exports[`regression tests > switches selected element on pointer down > [end of test] appState 1`] = `undefined`;

exports[`regression tests > switches selected element on pointer down > [end of test] number of renders 1`] = `0`;

exports[`regression tests > two-finger scroll works > [end of test] appState 1`] = `undefined`;

exports[`regression tests > two-finger scroll works > [end of test] number of renders 1`] = `0`;

exports[`regression tests > undo/redo drawing an element > [end of test] appState 1`] = `undefined`;

exports[`regression tests > undo/redo drawing an element > [end of test] number of renders 1`] = `0`;

exports[`regression tests > updates fontSize & fontFamily appState > [end of test] appState 1`] = `undefined`;

exports[`regression tests > updates fontSize & fontFamily appState > [end of test] number of renders 1`] = `0`;

exports[`regression tests > zoom hotkeys > [end of test] appState 1`] = `undefined`;

exports[`regression tests > zoom hotkeys > [end of test] number of renders 1`] = `0`;
